implement memory cache for key access levels change ui functions to operate on cache only remove all database manipulation on Permission-Keysets