@@ -6,13 +6,9 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.*;
 import java.util.concurrent.CancellationException;
-import java.util.stream.Collectors;
 import kernbeisser.CustomComponents.ObjectTable.Column;
 import kernbeisser.CustomComponents.ObjectTable.Columns.Columns;
-import kernbeisser.DBConnection.DBConnection;
 import kernbeisser.DBEntities.Permission;
-import kernbeisser.DBEntities.Permission_;
-import kernbeisser.Enums.PermissionConstants;
 import kernbeisser.Security.PermissionKeyGroups;
 import kernbeisser.Security.PermissionKeys;
 import kernbeisser.Useful.CSV;
@@ -37,30 +33,10 @@ public class PermissionController extends Controller<PermissionView, PermissionM
     super(new PermissionModel());
   }
 
-  private Permission lastSelection;
-
-  private void change(Permission permission, PermissionKey key) {
-    // if(LogInModel.getLoggedIn().hasPermission(Key.find(KeyCategory.PERMISSIONS)))
-    if (permission.contains(key)) {
-      if (permission.contains(PermissionKeys.getWriteKey(key))) {
-        model.removeKey(permission, PermissionKeys.getWriteKey(key));
-        model.removeKey(permission, key);
-      } else {
-        model.addKey(permission, PermissionKeys.getWriteKey(key));
-      }
-    } else {
-      model.addKey(permission, key);
-    }
-    loadSolutions();
-  }
-
-  void loadSolutions() {
-    Optional<PermissionKeyGroups> selectedPermissionKerOrdering = getView().getCategory();
-    if (selectedPermissionKerOrdering.isEmpty()) return;
-    List<Permission> permissions =
-        DBConnection.getConditioned(
-            Permission.class, Permission_.name.eq(PermissionConstants.ADMIN.nameId()).not());
-    Collections.reverse(permissions);
+  void loadPermissionGroup() {
+    Optional<PermissionKeyGroups> selectedGroup = getView().getSelectedGroup();
+    if (selectedGroup.isEmpty()) return;
+    List<PermissionKey> groupKeys = model.selectGroup(selectedGroup.get());
     Column<PermissionKey> nameColumn =
         Columns.create(
             "Schlüssel-Name",
@@ -70,58 +46,24 @@ public class PermissionController extends Controller<PermissionView, PermissionM
                         .replace("_WRITE", "")
                         .replace("_READ", "")
                         .replace("CHANGE_ALL", "Alle Bearbeiten")));
-    ArrayList<Column<PermissionKey>> permissionColumns = new ArrayList<>();
+    List<Column<PermissionKey>> permissionColumns = new ArrayList<>();
     permissionColumns.add(nameColumn);
-    PermissionKeyGroups selected = selectedPermissionKerOrdering.get();
-    Collection<PermissionKey> readPermission = PermissionKeys.find(selected, true, false);
-    Collection<PermissionKey> writePermission = PermissionKeys.find(selected, false, true);
     permissionColumns.addAll(
-        permissions.stream()
+        model.readAllPermissions().stream()
             .map(
                 permission ->
-                    Columns.create(
+                    Columns.<PermissionKey>create(
                             permission.getNeatName(),
-                            (PermissionKey permissionKey) -> {
-                              if (permissionKey == PermissionKey.CHANGE_ALL) {
-                                boolean read = permission.getKeySet().containsAll(readPermission);
-                                boolean write = permission.getKeySet().containsAll(writePermission);
-                                return read ? write ? "Lesen & schreiben" : "Lesen" : "Keine";
-                              }
-
-                              if (PermissionKeyGroups.isInGroup(
-                                  permissionKey, PermissionKeyGroups.ACTIONS)) {
-                                return permission.contains(permissionKey) ? "Ja" : "Nein";
-                              }
-                              boolean read = permission.contains(permissionKey);
-                              boolean write =
-                                  permission.contains(PermissionKeys.getWriteKey(permissionKey));
-                              return read ? write ? "Lesen & schreiben" : "Lesen" : "Keine";
-                            })
-                        .withDoubleClickConsumer(
-                            e -> {
-                              lastSelection = permission;
-                              if (e == PermissionKey.CHANGE_ALL) {
-                                boolean read = permission.getKeySet().containsAll(readPermission);
-                                boolean write = permission.getKeySet().containsAll(writePermission);
-                                if (read) {
-                                  if (write) {
-                                    model.removeKeys(permission, readPermission);
-                                    model.removeKeys(permission, writePermission);
-                                  } else model.addKeys(permission, writePermission);
-                                } else model.addKeys(permission, readPermission);
-                              }
-                              change(permission, e);
-                            }))
-            .collect(Collectors.toCollection(ArrayList::new)));
-    List<PermissionKey> values =
-        Arrays.stream(selected.getKeys())
-            .filter(
-                key -> selected == PermissionKeyGroups.ACTIONS || !key.name().endsWith("_WRITE"))
-            .sorted(Comparator.comparing(p -> PermissionKeys.getPermissionHint(p.toString())))
-            .collect(Collectors.toList());
-    if (!selected.equals(PermissionKeyGroups.ACTIONS)) values.addFirst(PermissionKey.CHANGE_ALL);
-    getView().setValues(values);
+                            (k) -> model.getPermissionLevel(k, permission).getName())
+                        .withDoubleClickConsumer(k -> cycleAccess(permission, k))
+                )
+            .toList());
+    getView().setValues(groupKeys);
     getView().setColumns(permissionColumns);
+  }
+
+  private void cycleAccess(Permission permission, PermissionKey key) {
+    getView().getPermission().replace(key, model.cycleAccess(key, permission));
   }
 
   public void addPermission() {
@@ -132,7 +74,7 @@ public class PermissionController extends Controller<PermissionView, PermissionM
     } while (permissionName.isEmpty());
     try {
       model.addPermission(permissionName);
-      loadSolutions();
+      loadPermissionGroup();
     } catch (PersistenceException e) {
       getView().nameIsNotUnique();
       addPermission();
@@ -144,13 +86,13 @@ public class PermissionController extends Controller<PermissionView, PermissionM
     try {
       permission = getView().inputAskForPermission(model.getAllPermissions());
       model.deletePermission(permission);
-      loadSolutions();
+      loadPermissionGroup();
       getView().successfulDeleted();
     } catch (CancellationException ignored) {
     } catch (PersistenceException e) {
       if (getView().permissionIsInUse()) {
         model.removeUserFromPermission(permission);
-        loadSolutions();
+        loadPermissionGroup();
         getView().successfulDeleted();
       }
     }
@@ -164,14 +106,14 @@ public class PermissionController extends Controller<PermissionView, PermissionM
   @Override
   public void fillView(PermissionView permissionView) {
     getView().setCategories(model.getAllKeyCategories());
-    loadSolutions();
+    loadPermissionGroup();
   }
 
   public boolean importFrom(File selectedFile) throws FileNotFoundException {
     if (!PermissionRepresentation.putInDB(selectedFile)) {
       return false;
     }
-    loadSolutions();
+    loadPermissionGroup();
     return true;
   }
 
